--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
 <div class="row">
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src=" {% static 'images/items/1.jpg' %}"> </a>
+			<a href="./product-detail.html" class="img-wrap"> <img src=" {% static 'images/items/banner1.jpg' %}"> </a>
 			<figcaption class="info-wrap">
 				<a href="./product-detail.html" class="title">Just another product name</a>
 				<div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
