--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 
 <title>Fashion shop - Thời trang dành cho bạn</title>
 
-<link href=" {% static 'images/favicon2.ico' %}" rel="shortcut icon" type="image/x-icon">
+<link href=" {% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
 
 <!-- jQuery -->
 <script src=" {% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
