--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -37,12 +37,12 @@
                     <i class="fa fa-bars"></i> All category 
                 </button>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Machinery / Mechanical Parts / Tools </a>
-                    <a class="dropdown-item" href="#">Consumer Electronics / Home Appliances </a>
-                    <a class="dropdown-item" href="#">Auto / Transportation</a>
-                    <a class="dropdown-item" href="#">Apparel / Textiles / Timepieces </a>
-                    <a class="dropdown-item" href="#">Home & Garden / Construction / Lights </a>
-                    <a class="dropdown-item" href="#">Beauty & Personal Care / Health </a> 
+                    <a class="dropdown-item" href="#">Áo thun / sơ mi nam </a>
+                    <a class="dropdown-item" href="#">Áo thun / sơ mi nữ </a>
+                    <a class="dropdown-item" href="#">Quần tây / jean / short nam</a>
+                    <a class="dropdown-item" href="#">Quần tây / jean / short nữ </a>
+                    <a class="dropdown-item" href="#">Balo / túi xách </a>
+                    <a class="dropdown-item" href="#">Phụ kiện thời trang </a> 
                 </div>
             </div>  <!-- category-wrap.// -->
         </div> <!-- col.// -->
