--- a/templates/home.html
+++ b/templates/home.html
@@ -6,18 +6,13 @@
 <!-- ========================= SECTION MAIN ========================= -->
 <section class="section-intro padding-y-sm">
 <div class="container">
-
+<!--
 <div class="intro-banner-wrap">
 	<img src=" {% static 'images/banners/1.jpg' %}" class="img-fluid rounded">
 </div>
-
+-->
 <!--Slide nhanleno thêm vào -->
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-	<div class="carousel-indicators">
-	  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-	  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-	  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-	</div>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
 	<div class="carousel-inner">
 	  <div class="carousel-item active">
 		<img src="{% static 'images/banners/1.jpg' %}" class="d-block w-100" alt="...">
@@ -29,14 +24,6 @@
 		<img src="{% static 'images/banners/3.jpg' %}" class="d-block w-100" alt="...">
 	  </div>
 	</div>
-	<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	  <span class="visually-hidden">Previous</span>
-	</button>
-	<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	  <span class="visually-hidden">Next</span>
-	</button>
   </div>
   <!--Kết thúc slide-->
 
