--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -37,12 +37,9 @@
                     <i class="fa fa-bars"></i> All category 
                 </button>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Áo thun / sơ mi nam </a>
-                    <a class="dropdown-item" href="#">Áo thun / sơ mi nữ </a>
-                    <a class="dropdown-item" href="#">Quần tây / jean / short nam</a>
-                    <a class="dropdown-item" href="#">Quần tây / jean / short nữ </a>
-                    <a class="dropdown-item" href="#">Balo / túi xách </a>
-                    <a class="dropdown-item" href="#">Phụ kiện thời trang </a> 
+                    {% for category in links %}
+                    <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
+                    {% endfor %}
                 </div>
             </div>  <!-- category-wrap.// -->
         </div> <!-- col.// -->
