--- a/templates/home.html
+++ b/templates/home.html
@@ -36,23 +36,22 @@
 <div class="container">
 
 <header class="section-heading">
-	<a href="./store.html" class="btn btn-outline-primary float-right">See all</a>
+	<a href="{% url 'store' %}" class="btn btn-outline-primary float-right">See all</a>
 	<h3 class="section-title">Popular products</h3>
 </header><!-- sect-heading -->
 
-	
 <div class="row">
-	{% for product in products %}
+{% for product in products %}
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src=" {{product.images.url}}"> </a>
+			<a href="{{ product.get_url }}" class="img-wrap"> <img src=" {{ product.images.url }}"> </a>
 			<figcaption class="info-wrap">
-				<a href="./product-detail.html" class="title">{{product.product_name}}</a>
+				<a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
 				<div class="price mt-1">đ {{product.price}}</div> <!-- price-wrap.// -->
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
-	{% endfor %}
+{% endfor %}
 
 </div> <!-- row.// -->
 
