--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -13,7 +13,8 @@
     <div class="card">
         <div class="card-body">
             <h4 class="card-title" mb-4> Địa chỉ thanh toán </h4>
-            <form action="">
+            <form action="" method="POST">
+                {% cart_token %}
                 <div class="form-row">
                     <div class="col form-group">
                         <label for="">First Name </label>
@@ -63,7 +64,7 @@
                         <textarea name="order_note" row="2" class="form-control"></textarea>
                     </div>
                 
-            </form>
+            
         </div>
     </div> <!-- card.// -->
     
@@ -116,11 +117,13 @@
                 
                     </tbody>
                     </table>
-                <a href="./place-order.html" class="btn btn-primary btn-block"> Place Order </a>
+                
+                <button type="submit" name="submit" class="btn btn-primary btn-block">Place Order</button>
                 <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
+            </form>
             </div> <!-- card-body.// -->
             </div> <!-- card.// -->
-    
+            
     </aside> <!-- col.// -->
     
     
