--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -13,7 +13,7 @@
     <div class="card">
         <div class="card-body">
             <h4 class="card-title" mb-4> Địa chỉ thanh toán </h4>
-            <form action="" method="POST">
+            <form action="{% url 'place_order' %}" method="POST">
                 {% cart_token %}
                 <div class="form-row">
                     <div class="col form-group">
@@ -116,7 +116,7 @@
                     {% endfor %}
                 
                     </tbody>
-                    </table>
+                </table>
                 
                 <button type="submit" name="submit" class="btn btn-primary btn-block">Place Order</button>
                 <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
