--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -7,7 +7,7 @@
     <div class="container">
     
     <!-- ============================ COMPONENT 1 ================================= -->
-    {% if not cart_item %}
+    {% if not cart_items %}
         <h3 class="text-center">Your Shopping Cart is Empty</h3>
         <br>
         <div class="text-center">
