--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -50,7 +50,7 @@
         <div class="col"> 
             <div class="input-group input-spinner">
                 <div class="input-group-prepend">
-                <a href="{% url 'remove_cart' cart_item.product.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+                <a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
                 </div>
                 <input type="text" class="form-control"  value="{{ cart_item.quantity }}">
                 <div class="input-group-append">
@@ -67,12 +67,12 @@
     </td>
     <td> 
         <div class="price-wrap"> 
-            <var class="price">$ {{ cart_item.sub_total }}</var> 
-            <small class="text-muted"> $ {{ cart_item.product.price }} each </small> 
+            <var class="price"> {{ cart_item.sub_total }} đ</var> 
+            <small class="text-muted">  {{ cart_item.product.price }} đ each </small> 
         </div> <!-- price-wrap .// -->
     </td>
     <td class="text-right"> 
-        <a href="{% url 'remove_cart_item' cart_item.product.id %}" class="btn btn-danger"> Remove</a>
+        <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Are you sure you want to delete this item?')" class="btn btn-danger"> Remove</a>
     </td>
 </tr>
 {% endfor %}
@@ -88,21 +88,21 @@
         <div class="card-body">
             <dl class="dlist-align">
                 <dt>Total price:</dt>
-                <dd class="text-right">$ {{ total }}</dd>
+                <dd class="text-right">{{ total }} đ</dd>
             </dl>
             <dl class="dlist-align">
                 <dt>Tax:</dt>
-                <dd class="text-right"> $ {{ tax }}</dd>
+                <dd class="text-right"> {{ tax }} đ</dd>
             </dl>
             <dl class="dlist-align">
                 <dt>Grand total:</dt>
-                <dd class="text-right text-dark b"><strong>$ {{ grand_total }}</strong></dd>
+                <dd class="text-right text-dark b"><strong> {{ grand_total }} đ</strong></dd>
             </dl>
             <hr>
             <p class="text-center mb-3">
                 <img src="{% static './images/misc/payments.png' %}" height="26">
             </p>
-            <a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
+            <a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Checkout </a>
             <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
         </div> <!-- card-body.// -->
         </div> <!-- card.// -->
