--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -12,16 +12,16 @@
     <aside class="col-lg-6">
 <div class="card">
     <div class="card-body">
-        <h4 class="card-title mb-4">Billing Address</h4>
+        <h4 class="card-title mb-4">Địa chỉ đơn hàng</h4>
         <form action="{% url 'place_order' %}" method="POST">
             {% csrf_token %}
             <div class="form-row">
                <div class="col form-group">
-                <label for="">First Name</label>
+                <label for="">Họ</label>
                 <input type="text" name="first_name" class="form-control" required>
                </div>
                <div class="col form-group">
-                <label for="">Last Name</label>
+                <label for="">Tên</label>
                 <input type="text" name="last_name" class="form-control" required>
                </div>  
             </div>
@@ -31,36 +31,36 @@
                  <input type="email" name="email" class="form-control" required>
                 </div>
                 <div class="col form-group">
-                 <label for="">Phone Number</label>
+                 <label for="">Số điện thoại</label>
                  <input type="text" name="phone" class="form-control" required>
                 </div>  
              </div>
              <div class="form-row">
                 <div class="col form-group">
-                 <label for="">Address Line 1</label>
+                 <label for="">Địa chỉ 1</label>
                  <input type="text" name="address_line_1" class="form-control" required>
                 </div>
                 <div class="col form-group">
-                 <label for="">Address Line 2</label>
+                 <label for="">Địa chỉ 2</label>
                  <input type="text" name="address_line_2" class="form-control">
                 </div>  
              </div>
              <div class="form-row">
                 <div class="col form-group">
-                 <label for="">City</label>
+                 <label for="">Thành phố</label>
                  <input type="text" name="city" class="form-control" required>
                 </div>
                 <div class="col form-group">
-                 <label for="">State</label>
+                 <label for="">Quận</label>
                  <input type="text" name="state" class="form-control" required>
                 </div>
                 <div class="col form-group">
-                    <label for="">Country</label>
+                    <label for="">Quốc gia</label>
                     <input type="text" name="country" class="form-control" required>
                 </div>
             </div>
                 <div class="form-row">
-                    <label for="">Order Note</label>
+                    <label for="">Ghi chú đơn hàng</label>
                     <textarea name="order_note" rows="2" class="form-control"></textarea>
                 </div>  
               
@@ -75,9 +75,9 @@
             <table class="table table-borderless table-shopping-cart">
                 <thead class="text-muted">
                 <tr class="small text-uppercase">
-                    <th scope="col">Product</th>
-                    <th scope="col" width="120">Quantity</th>
-                    <th scope="col" width="120">Price</th>
+                    <th scope="col">Sản phẩm</th>
+                    <th scope="col" width="120">Số lượng</th>
+                    <th scope="col" width="120">Giá</th>
                     
                 </tr>
                 </thead>
@@ -107,7 +107,7 @@
                     <td> 
                         <div class="price-wrap"> 
                             <var class="price"> {{ cart_item.sub_total }} đ</var> 
-                            <small class="text-muted">  {{ cart_item.product.price }} đ each </small> 
+                            <small class="text-muted">  {{ cart_item.product.price }} đ cái </small> 
                         </div> <!-- price-wrap .// -->
                     </td>
                    
@@ -116,8 +116,8 @@
                 
                 </tbody>
                 </table>
-            <button type="submit" name="submit" class="btn btn-primary btn-block">Place Order</button>
-            <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
+            <button type="submit" name="submit" class="btn btn-primary btn-block">Đặt hàng</button>
+            <a href="{% url 'store' %}" class="btn btn-light btn-block">Tiếp tục mua sắm</a>
         </form>
         </div> <!-- card-body.// -->
         </div> <!-- card.// -->
