--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -14,7 +14,7 @@
         <div class="card-body">
             <h4 class="card-title" mb-4> Địa chỉ thanh toán </h4>
             <form action="{% url 'place_order' %}" method="POST">
-                {% cart_token %}
+               <!-- {% cart_token %} --> 
                 <div class="form-row">
                     <div class="col form-group">
                         <label for="">First Name </label>
