--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -63,33 +63,64 @@
     <br>
     
     <div class="row">
-                <div class="col-md-9">
-    
-        <header class="section-heading">
-            <h3>Customer Reviews </h3>  
+        <div class="col-md-9">
             
-        </header>
-    
-        <article class="box mb-3">
-            <div class="icontext w-100">
+            <form action =" {% url 'submit_review' single_product.id %}" method="POST">
+                {% csrf_token %}
+                <h5>Write Your Review</h5>
+                <div>
+                   <label>How do you rate for this?</label>
+                    <br>
+                    <div class="rate">
+                        <input type="radio" name="rating" id="rating10" value="5" required ><label for="rating10" title="5"></label>
+                        <input type="radio" name="rating" id="rating9" value="4.5" required ><label for="rating9" title="4.5" class="half"></label>
+                        <input type="radio" name="rating" id="rating8" value="4" required ><label for="rating8" title="4"></label>
+                        <input type="radio" name="rating" id="rating7" value="3.5" required ><label for="rating7" title="3.5" class="half"></label>
+                        <input type="radio" name="rating" id="rating6" value="3" required ><label for="rating6" title="3"></label>
+                        <input type="radio" name="rating" id="rating5" value="2.5" required ><label for="rating5" title="2.5" class="half"></label>
+                        <input type="radio" name="rating" id="rating4" value="2" required ><label for="rating4" title="2"></label>
+                        <input type="radio" name="rating" id="rating3" value="1.5" required ><label for="rating3" title="1.5" class="half"></label>
+                        <input type="radio" name="rating" id="rating2" value="1" required ><label for="rating2" title="1"></label>
+                        <input type="radio" name="rating" id="rating1" value="0.5" required ><label for="rating1" title="0.5" class="half"></label>
+                    </div>
+                    <br>
+                    Review Title:
+                    <input type="text" class="form-control" name="subject">
+                    <br>
+                    Review:
+                    <textarea name="review" row="4" class="form-control"></textarea>
+                    <br>
+                    {% if user.is_authenticated %}
+                    <input type="submit" value="Submit Review" class="btn btn-primary">
+                    {% else %}
+                    <p>You must be logged in to post a review.<span><a href="{% url 'login' %}">Login now</a></span></p>
+                    {% endif %}
+                </div>
+{% include 'includes/alerts.html' %}    
+            </form>
+    <br>
+    <header class="section-heading">
+        <h3>Customer Reviews </h3>  
+    </header>
+{% for review in reviews %}
+            <article class="box mb-3">
+                <div class="icontext w-100">
                 <img src="{% static './images/avatars/avatar1.jpg' %}" class="img-xs icon rounded-circle">
                 <div class="text">
                     <span class="date text-muted float-md-right">24.04.2020 </span>  
                     <h6 class="mb-1">Mike John </h6>
                     
                 </div>
-            </div> <!-- icontext.// -->
-            <div class="mt-3">
+                </div> <!-- icontext.// -->
+                <div class="mt-3">
                 <p>
                     Dummy comment Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nisi ut aliquip
                 </p>	
-            </div>
-        </article>
-    
-        
-    
+                </div>
+            </article>
+{% endfor %} 
         </div> <!-- col.// -->
     </div> <!-- row.// -->
     
