--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -8,20 +8,6 @@
     
     <!-- ============================ COMPONENT 1 ================================= -->
 {% if not cart_items %}
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> remotes/origin/conngan
-    <h3 class="text-center">Your Shopping Cart is Empty</h3>
-    <br>
-    <div class="text-center">
-        <a href="{% url 'store' %}" class="btn btn-primary">Continue Shopping</a>
-    </div>
-{% else %}
-<div class="row">
-    <aside class="col-lg-9">
-<<<<<<< HEAD
-=======
     <h3 class="text-center">Không có sản phẩm nào trong giỏ hàng của bạn</h3>
     <br>
     <div class="text-center">
@@ -30,28 +16,13 @@
 {% else %}
 <div class="row">
     <aside class="col-lg-8">
->>>>>>> remotes/origin/phuocNguyen
-=======
->>>>>>> remotes/origin/conngan
 <div class="card">
 <table class="table table-borderless table-shopping-cart">
 <thead class="text-muted">
 <tr class="small text-uppercase">
-<<<<<<< HEAD
-<<<<<<< HEAD
-    <th scope="col">Product</th>
-    <th scope="col" width="120">Quantity</th>
-    <th scope="col" width="120">Price</th>
-=======
     <th scope="col">Sản phẩm</th>
     <th scope="col" width="130">Số lượng</th>
     <th scope="col" width="130">Giá</th>
->>>>>>> remotes/origin/phuocNguyen
-=======
-    <th scope="col">Product</th>
-    <th scope="col" width="120">Quantity</th>
-    <th scope="col" width="120">Price</th>
->>>>>>> remotes/origin/conngan
     <th scope="col" class="text-right" width="200"> </th>
 </tr>
 </thead>
@@ -97,25 +68,11 @@
     <td> 
         <div class="price-wrap"> 
             <var class="price"> {{ cart_item.sub_total }} đ</var> 
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> remotes/origin/conngan
-            <small class="text-muted">  {{ cart_item.product.price }} đ each </small> 
-        </div> <!-- price-wrap .// -->
-    </td>
-    <td class="text-right"> 
-        <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Are you sure you want to delete this item?')" class="btn btn-danger"> Remove</a>
-<<<<<<< HEAD
-=======
             <small class="text-muted">  {{ cart_item.product.price }} đ/cái </small> 
         </div> <!-- price-wrap .// -->
     </td>
     <td class="text-right"> 
         <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Are you sure you want to delete this item?')" class="btn btn-danger">Xoá</a>
->>>>>>> remotes/origin/phuocNguyen
-=======
->>>>>>> remotes/origin/conngan
     </td>
 </tr>
 {% endfor %}
@@ -125,34 +82,11 @@
 </div> <!-- card.// -->
     
     </aside> <!-- col.// -->
-<<<<<<< HEAD
-<<<<<<< HEAD
-    <aside class="col-lg-3">
-=======
     <aside class="col-lg-4">
->>>>>>> remotes/origin/phuocNguyen
-=======
-    <aside class="col-lg-3">
->>>>>>> remotes/origin/conngan
     
         <div class="card">
         <div class="card-body">
             <dl class="dlist-align">
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> remotes/origin/conngan
-                <dt>Total price:</dt>
-                <dd class="text-right">{{ total }} đ</dd>
-            </dl>
-            <dl class="dlist-align">
-                <dt>Tax:</dt>
-                <dd class="text-right"> {{ tax }} đ</dd>
-            </dl>
-            <dl class="dlist-align">
-                <dt>Grand total:</dt>
-<<<<<<< HEAD
-=======
                 <dt>Tổng cộng:</dt>
                 <dd class="text-right">{{ total }} đ</dd>
             </dl>
@@ -162,31 +96,14 @@
             </dl>
             <dl class="dlist-align">
                 <dt>Thành tiền:</dt>
->>>>>>> remotes/origin/phuocNguyen
-=======
->>>>>>> remotes/origin/conngan
                 <dd class="text-right text-dark b"><strong> {{ grand_total }} đ</strong></dd>
             </dl>
             <hr>
             <p class="text-center mb-3">
-<<<<<<< HEAD
-<<<<<<< HEAD
-                <img src="{% static './images/misc/payments.png' %}" height="26">
-            </p>
-            <a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Checkout </a>
-            <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
-=======
                 <img src="{% static './images/misc/cash.png' %}" height="26">
             </p>
-            <a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Thanh toán </a>
+            <a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Đặt hàng </a>
             <a href="{% url 'store' %}" class="btn btn-light btn-block">Tiếp tục mua sắm</a>
->>>>>>> remotes/origin/phuocNguyen
-=======
-                <img src="{% static './images/misc/payments.png' %}" height="26">
-            </p>
-            <a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
-            <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
->>>>>>> remotes/origin/conngan
         </div> <!-- card-body.// -->
         </div> <!-- card.// -->
     
