--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% csrf_token %}
+#{% csrf_token %}
 
 <section class = "section-content padding-y" style = "min-height: 84vh">
 
@@ -14,31 +14,30 @@
 
 {% else %}
 
-
-    <div class = "card mx-auto" style = "max-width: 380px; margin-top: 100px;">
-        <div class = "card-body">
-        <h4 class = "card-title mb-4">Sign in</h4>
-        {% include  'includes/alerts.html' %}
-        <form action = "{% url 'login' %}" method = "POST">
-           {% csrf_token %}
-            <div class = "form-group">
-        <input type="email" class = "form-control" placeholder = "Email Address">
-            </div>
-            <div class = "form-group">
-        <input type = "password" class = "form-control" placeholder = "Password" name = "password">
-            </div>
-            <div class = "form-group">
-                <a href = "#" class = "float-right">Forgot password?</a>
-            </div>
-            <div class = "form-group">
-                <button type = "submit" class="btn btn-primary btn-block"> Login </button>
-            </div>
-        </form>
+        <div class = "card mx-auto" style = "max-width: 380px; margin-top: 100px;">
+            <div class = "card-body">
+            <h4 class = "card-title mb-4">Sign in</h4>
+            {% include  'includes/alerts.html' %}
+            <form action = "{% url 'login' %}" method = "POST">
+                {% csrf_token %}
+                <div class = "form-group">
+                    <input type="email" class = "form-control" placeholder = "Email Address" name = "email">
+                </div>
+                <div class = "form-group">
+                    <input type = "password" class = "form-control" placeholder = "Password" name = "password">
+                </div>
+                <div class = "form-group">
+                    <a href = "{% url 'forgotPassword' %}" class = "float-right">Forgot password?</a>
+                </div>
+                <div class = "form-group">
+                    <button type = "submit" class="btn btn-primary btn-block"> Login </button>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
-<p class = "text-center mt-4">Don't have account? <a href = "{% url 'register' %}">Sign up</a></p>
-<br><br>
-</section>  
-
+    <p class = "text-center mt-4">Don't have account? <a href = "{% url 'register' %}">Sign up</a></p>
+    <br><br>
 {% endif %}
+
+</section>  
 {% endblock%} 
