--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -8,86 +8,39 @@
 
 <div class = "container">
     <div class = "row">
-    <aside class = "col-md-3">
-        <ul class = "list-group">
-            <a class = "list-group-item active" href = "#"> My order history </a>
-            <a class = "list-group-item" href = "#"> Transactions </a>
-            <a class = "list-group-item" href = "#"> Return and refunds </a>
-            <a class = "list-group-item" href = "#"> Settings </a>
-            <a class = "list-group-item" href = "#"> My selling Items </a>
-            <a class = "list-group-item" href = "#"> Received order </a>
-        </ul>
-        <br>
-        <a class = "btn btn-light btn-block" href = "{% url 'logout' %}"><i class="fa fa-power-off"></i><span class = "text">Log out</span></a>
-    </aside>
+    
+    {% include 'includes/dashboard_sidebar.html'%}
+
     <main class = "col-md-9">
         <article class = "card">
         <header class = "card-header">
-            <strong class = "d-inline-block mr-3">Order ID: 6123456789</strong>
-            <span>Order Date: 16 December 2018</span>
+            <strong class = "d-inline-block mr-3">Logged in as:</strong>
+            <span>{{user.full_name}}</span>
         </header>
         <div class = "card-body">
             <div class = "row">
-                <div class = "col-md-8">
-                    <h6 class = "text-muted">Delivery to</h6>
-                    <p>Michael Jackson<br>
-                    Phone: +123456789  Email: 123@abc.com<br>
-                    Location: No 123, Building abc, street xyz, Vietnam<br>
-                    P.O.Box: 12345
-                    </p>
+                <div class = "col-md-6">
+                    <div class = "card" style = "text-align: center;">
+                        <div class = "card-body">
+                            <h5 class = "card-title">Total Orders</h5>
+                            <h4>{{orders_count}}</h4>
+                            <a href = "">View Orders</a>
+                        </div>
+                    </div>
                 </div>
-                <div class = "col-md-4">
-                    <h6 class = "text-muted">Payment</h6>
-                    <span class = "text-success">
-                        <i class = "fab fa-lg fa-cc-visa"></i>
-                        Visa **** 1234
-                    </span>
-                    <p>Subtotal: $356<br>
-                    Shipping fee: $56<br>
-                    <span class = "b"> Total: $456</span>
-                    </p>
+                <div class = "col-md-6">
+                    <div class = "card" style = "text-align: center;">
+                        <img src = "https://www.w3schools.com/howto/howto_css_image_avatar.asp" alt = "User Profile Picture" width = "50" height = "50" style = "border-radius: 50%;">
+                        <p class = "mb-0">{{user.email}}</p>
+                        <p>{{user.phone_number}}</p>
+                    </div>
                 </div>
             </div>
-            <div class = "table-responsive">
-            <table class = "table table-hover">
-                <tr>
-                    <td with = "65">
-                        <img src = "../images/items/1.jpg" class = "img-xs border">
-                    </td>
-                    <td>
-                        <p class = "title mb-0">Product name goes here</p>
-                        <var class = "price text-muted">USD 145</var>
-                    </td>
-                    <td>Seller <br> Nike clothing </td>
-                    <td width = "250"><a href = "#" class = "btn btn-outline-primary">Track order</a><a href = "#" class = "btn btn-light"> Details </a></td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src = "../images/items/2.jpg" class = "img-xs border">
-                    </td>
-                    <td>
-                        <p class = "title mb-0">Another name goes here</p>
-                        <var class = "price text-muted">USD 15</var>
-                    </td>
-                    <td>Seller <br> ABC shop </td>
-                    <td><a href = "#" class = "btn btn-outline-primary">Track order</a><a href = "#" class = "btn btn-light"> Details </a></td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src = "../images/items/3.jpg" class = "img-xs border">
-                    </td>
-                    <td>
-                        <p class = "title mb-0">The name of the product goes here</p>
-                        <var class = "price text-muted">USD 145</var>
-                    </td>
-                    <td>Seller <br> Wallmart </td>
-                    <td><a href = "#" class = "btn btn-outline-primary">Track order</a><a href = "#" class = "btn btn-light"> Details </a></td>
-                </tr>
-            </table>
         </div>
-    </article>
-</main>
+        </article>
+    </main>
 </div>
+
 </section>
 
 {% endblock content %}
