--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<section class="section-content padding-y">
+<section class="section-content padding-y bg">
 
     <!-- ============================ COMPONENT REGISTER   ================================= -->
         <div class="card mx-auto" style="max-width:520px; margin-top:40px;">
