--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -27,44 +27,47 @@
                     <div class = "from-row">
                         <div class = "form-group col-md-6">
                             <label>First name</label>
-                            {{user_form.first_name}}
+                            {{ user_form.first_name }}
                         </div>
                         <div class = "form-group col-md-6">
                             <label>Last name</label>
-                            {{user_form.last_name}}
+                            {{ user_form.last_name }}
+                        </div>
+                    </div>
+                    <div class = "from-row">
+                        <div class = "form-group col-md-6">
+                            <label>Phone number </label>
+                            {{ user_form.phone_number }}
                         </div>
                         <div class = "form-group col-md-6">
-                            <label>Phone number</label>
-                            {{user_form.phone_number}}
-                        </div>
-                        <div class = "form-group col-md-6">
-                            <label>Profile Picture</label>
-                            {{profile_form.profile_picture}}
+                            <label> Profile Picture </label>
+                            {{ profile_form.profile_pictue }}
                         </div>
                     </div>
-                    <div class = "form-group">
-                        <label>Address Line 1</label>
-                        {{profile_form.address_line_1}}
+                    <div class ="form-group"
+                    <label> Address Line 1 </label>
+                    {{ profile_form.address_line_1}}
                     </div>
-                    <div class = "form-group">
-                        <label>Address Line 2</label>
-                        {{profile_form.address_line_2}}
+                    <div class ="form-group"
+                    <label> Address Line 2 </label>
+                    {{ profile_form.address_line_2}}
                     </div>
-                    <div class = "form-group col-md-4">
-                        <label>City</label>
-                        {{profile_form.city}}
+                    <div class = "from-row">
+                        <div class = "form-group col-md-4">
+                            <label>City </label>
+                            {{ profile_form.city}}
+                        </div>
+                        <div class = "form-group col-md-4">
+                            <label> State</label>
+                            {{ profile_form.state}}
+                        </div>
+                        <div class = "form-group col-md-4">
+                            <label> Country </label>
+                            {{ profile_form.country}}
+                        </div>
                     </div>
-                    <div class = "form-group col-md-4">
-                        <label>State</label>
-                        {{profile_form.state}}
-                    </div>
-                    <div class = "form-group col-md-4">
-                        <label>Country</label>
-                        {{profile_form.country}}
-                    </div>
-                </div>
-                <input type = "submit" value = "Save" class = "btn btn-primary">
-                </form>
+                    <input type="submit" value ="Save" class ="btn btn-primary">
+                    </form>
             </div>
         </article>
     </main>
@@ -72,4 +75,4 @@
 </div>
 
 </section>
-{% endblock%}
+{% endblock %}
