--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -3,19 +3,15 @@
 {% block content %}
 
 <section class = "section-content padding-y bg" style = "min-height: 84vh">
-
 {% include 'includes/alerts.html' %}    
-
 <div class = "container">
     <div class = "row">
-    
-    {% include 'includes/dashboard_sidebar.html'%}
-
+    {% include 'includes/dashboard_sidebar.html' %}
     <main class = "col-md-9">
         <article class = "card">
         <header class = "card-header">
             <strong class = "d-inline-block mr-3">Logged in as:</strong>
-            <span>{{user.full_name}}</span>
+            <span>{{ user.full_name }}</span>
         </header>
         <div class = "card-body">
             <div class = "row">
@@ -43,4 +39,4 @@
 
 </section>
 
-{% endblock content %}
+{% endblock %}
