--- a/templates/accounts/order_detail.html
+++ b/templates/accounts/order_detail.html
@@ -48,7 +48,7 @@
                                     <ul class="list-unstyled mb0">
                                         <li><strong>Order</strong>: {{order_number}}</li>
                                 
-                                        <li><strong>Order Date:</strong>{{order.create_at}}</li>
+                                        <li><strong>Order Date:</strong>{{order.created_at}}</li>
                                         <li><strong>Status:</strong> {{payment.status}}</li>
                                     </ul>
                                 </div>
