--- a/templates/accounts/resetPassword.html
+++ b/templates/accounts/resetPassword.html
@@ -11,7 +11,7 @@
             <form action = "{% url 'resetPassword' %}" method = "POST">
                 {% csrf_token %}
                 <div class = "form-group">
-                    <input type = "password" class = "form-control" placeholder = "Password" name = "password">
+                    <input type = "password" class = "form-control" placeholder = "Create Password" name = "password">
                 </div>
                 <div class = "form-group">
                     <input type = "password" class = "form-control" placeholder = "Confirm Password" name = "confirm_password">
@@ -27,4 +27,4 @@
     <br><br>
 
 </section>  
-{% endblock%} 
+{% endblock %} 
