--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -8,21 +8,21 @@
     
     <!-- ============================ COMPONENT 1 ================================= -->
 {% if not cart_items %}
-    <h3 class="text-center">Không có sản phẩm nào trong giỏ hàng của bạn</h3>
+    <h3 class="text-center">Your Shopping Cart is Empty</h3>
     <br>
     <div class="text-center">
-        <a href="{% url 'store' %}" class="btn btn-primary">Tiếp tục mua sắm</a>
+        <a href="{% url 'store' %}" class="btn btn-primary">Continue Shopping</a>
     </div>
 {% else %}
 <div class="row">
-    <aside class="col-lg-8">
+    <aside class="col-lg-9">
 <div class="card">
 <table class="table table-borderless table-shopping-cart">
 <thead class="text-muted">
 <tr class="small text-uppercase">
-    <th scope="col">Sản phẩm</th>
-    <th scope="col" width="130">Số lượng</th>
-    <th scope="col" width="130">Giá</th>
+    <th scope="col">Product</th>
+    <th scope="col" width="120">Quantity</th>
+    <th scope="col" width="120">Price</th>
     <th scope="col" class="text-right" width="200"> </th>
 </tr>
 </thead>
@@ -68,11 +68,11 @@
     <td> 
         <div class="price-wrap"> 
             <var class="price"> {{ cart_item.sub_total }} đ</var> 
-            <small class="text-muted">  {{ cart_item.product.price }} đ/cái </small> 
+            <small class="text-muted">  {{ cart_item.product.price }} đ each </small> 
         </div> <!-- price-wrap .// -->
     </td>
     <td class="text-right"> 
-        <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Are you sure you want to delete this item?')" class="btn btn-danger">Xoá</a>
+        <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Are you sure you want to delete this item?')" class="btn btn-danger"> Remove</a>
     </td>
 </tr>
 {% endfor %}
@@ -82,28 +82,28 @@
 </div> <!-- card.// -->
     
     </aside> <!-- col.// -->
-    <aside class="col-lg-4">
+    <aside class="col-lg-3">
     
         <div class="card">
         <div class="card-body">
             <dl class="dlist-align">
-                <dt>Tổng cộng:</dt>
+                <dt>Total price:</dt>
                 <dd class="text-right">{{ total }} đ</dd>
             </dl>
             <dl class="dlist-align">
-                <dt>VAT:</dt>
+                <dt>Tax:</dt>
                 <dd class="text-right"> {{ tax }} đ</dd>
             </dl>
             <dl class="dlist-align">
-                <dt>Thành tiền:</dt>
+                <dt>Grand total:</dt>
                 <dd class="text-right text-dark b"><strong> {{ grand_total }} đ</strong></dd>
             </dl>
             <hr>
             <p class="text-center mb-3">
-                <img src="{% static './images/misc/cash.png' %}" height="26">
+                <img src="{% static './images/misc/payments.png' %}" height="26">
             </p>
-            <a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Đặt hàng </a>
-            <a href="{% url 'store' %}" class="btn btn-light btn-block">Tiếp tục mua sắm</a>
+            <a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Checkout </a>
+            <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
         </div> <!-- card-body.// -->
         </div> <!-- card.// -->
     
