--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -10,10 +10,10 @@
 				<span  class="px-2">+8428 6293 5101</span>
 				<span  class="px-2">590 CMT8, P.11, Q.3, TPHCM</span>
 			</div>
-			<div class="col-md-2 text-md-right text-muted">
-				<i class="fab fa-lg fa-facebook"></i>
-				<i class="fab fa-lg fa-twitter"></i>
-				<i class="fab fa-lg fa-youtube"></i>
+			<div class="col-md-2 text-md-right">
+				<i class="fab fa-lg fa-facebook text-primary"></i>
+				<i class="fab fa-lg fa-twitter text-success"></i>
+				<i class="fab fa-lg fa-youtube text-danger"></i>
 			</div>
 		</section>
 	</div><!-- //container -->
