--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -9,7 +9,7 @@
 <div class = "container">
     <div class = "row">
     
-    {% include 'includes/dashboard_sidebar.html'%}
+    {% include 'includes/dashboard_sidebar.html' %}
 
     <main class = "col-md-9">
         <article class = "card">
@@ -17,14 +17,14 @@
             <strong class = "d-inline-block mr-3">Edit your profile</strong>
         </header>
         <div class = "card-body">
-            <div class="text-right">
-                <img src = "{{userprofile.profile_picture.url}}" alt = "Profile Picture" width = "100" style = "boder-radius: 50px;">
+            <div class="text-center">
+                <img src = "{{userprofile.profile_picture.url}}" alt = "Profile Picture" width = "100" class="rounded-circle">
             </div>
             <div class = "row">
             <div class = "col-md-12">
                 <form action = "{% url 'edit_profile' %}" method ="POST" enctype = "multipart/form-data">
                     {% csrf_token %}
-                    <div class = "from-row">
+                    <div class = "form-row">
                         <div class = "form-group col-md-6">
                             <label>First name</label>
                             {{ user_form.first_name }}
@@ -34,25 +34,29 @@
                             {{ user_form.last_name }}
                         </div>
                     </div>
-                    <div class = "from-row">
+                    <div class = "form-row">
                         <div class = "form-group col-md-6">
                             <label>Phone number </label>
                             {{ user_form.phone_number }}
                         </div>
                         <div class = "form-group col-md-6">
                             <label> Profile Picture </label>
-                            {{ profile_form.profile_pictue }}
+                            {{ profile_form.profile_picture }}
                         </div>
                     </div>
-                    <div class ="form-group"
-                    <label> Address Line 1 </label>
-                    {{ profile_form.address_line_1}}
+                    <div class = "form-row">
+                        <div class = "form-group col-md-12">
+                            <label> Address Line 1 </label>
+                            {{ profile_form.address_line_1}}
+                        </div>
                     </div>
-                    <div class ="form-group"
-                    <label> Address Line 2 </label>
-                    {{ profile_form.address_line_2}}
+                    <div class = "form-row">
+                        <div class = "form-group col-md-12">
+                            <label> Address Line 2 </label>
+                            {{ profile_form.address_line_2}}
+                        </div>
                     </div>
-                    <div class = "from-row">
+                    <div class = "form-row">
                         <div class = "form-group col-md-4">
                             <label>City </label>
                             {{ profile_form.city}}
@@ -67,7 +71,7 @@
                         </div>
                     </div>
                     <input type="submit" value ="Save" class ="btn btn-primary">
-                    </form>
+                </form>
             </div>
         </article>
     </main>
