--- a/templates/accounts/reset_password_email.html
+++ b/templates/accounts/reset_password_email.html
@@ -2,9 +2,11 @@
 
 Hi {{user.first_name}},
 
-As requested, please click below link to reset your password.
-{{ protocol }}://{{domain}}{% url 'resetpassword_validate' uidb64=uid token=token %}
+Đây là mail của Fashion Shop, xác nhận đổi mật khẩu theo yêu cầu của bạn
+Vui lòng nhấn vào link bên dưới để reset lại mật khẩu:
+http://{{domain}}{% url 'resetpassword_validate' uidb64=uid token=token %}
 
-If you think it's not you, please ignore this email.
+Nếu không phải yêu cầu của bạn, xin bỏ qua mail này.
+Fashion Shop xin cảm ơn
 
 {% endautoescape %}
