fix some template

--- a/templates/accounts/order_detail.html
+++ b/templates/accounts/order_detail.html
@@ -37,8 +37,8 @@
                                 <div class="well">
                                     <ul class="list-unstyled mb0">
                                         <li><strong>Order</strong>: {{order.order_number}}</li>
-                                
-                                        <li><strong>Order Date:</strong>{{order.order.create_at}}</li>
+                                        <li><strong>Transaction ID</strong>: {{order.payment.payment_id}}</li>
+                                        <li><strong>Order Date:</strong>{{order.create_at}}</li>
                                         <li><strong>Status:</strong> {{order.payment.status}}</li>
                                     </ul>
                                 </div>
