--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -78,7 +78,7 @@
             <form action =" {% url 'submit_review' single_product.id %}" method="POST">
                 {% csrf_token %}
                 <h5>Write Your Review</h5>
-                
+                {{ single_product.averageReview }}
                 <div>
                    <label>How do you rate for this?</label>
                     <br>
