--- a/templates/accounts/my_orders.html
+++ b/templates/accounts/my_orders.html
@@ -30,11 +30,11 @@
                     <tbody>
                       {% for order in orders %}
                       <tr>
-                        <th scope="row"><a href="{% url 'order_detail order.order_number '%}">{{order.order_number}}</a></th>
+                        <th scope="row"><a href="{% url 'order_detail' order.order_number %}">{{order.order_number}}</a></th>
                         <td>{{order.full_name}}</td>
                         <td>{{order.phone}}</td>
                         <td>đ{{order.order_total}}</td>
-                        <td>{{order.created_at}}</td>
+                        <td>{{order.create_at}}</td>
                       </tr>
                       {% endfor %}
                     </tbody>
